// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInfo /> with crypto enabled renders <BasicUserInfo /> 1`] = `
<div>
  <div
    class="mx_BaseCard mx_UserInfo"
  >
    <div
      class="mx_BaseCard_header"
    >
      <div
        class="mx_BaseCard_header_title"
      >
        <p
          class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 mx_BaseCard_header_title_heading"
          role="heading"
        >
          Profile
        </p>
      </div>
      <button
        aria-labelledby=":r6i:"
        class="_icon-button_m2erp_8 _subtle-bg_m2erp_29"
        data-testid="base-card-close-button"
        role="button"
        style="--cpd-icon-button-size: 28px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_zr2a0_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="mx_AutoHideScrollbar"
      tabindex="-1"
    >
      <div
        class="mx_UserInfo_avatar"
      >
        <div
          class="mx_UserInfo_avatar_transition"
        >
          <div
            class="mx_UserInfo_avatar_transition_child"
          >
            <button
              aria-label="Profile picture"
              aria-live="off"
              class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
              data-color="3"
              data-testid="avatar-img"
              data-type="round"
              role="button"
              style="--cpd-avatar-size: 120px;"
            >
              u
            </button>
          </div>
        </div>
      </div>
      <div
        class="mx_UserInfo_container mx_UserInfo_header"
      >
        <div
          class="mx_Flex mx_UserInfo_profile"
          style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
        >
          <h1
            class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
            dir="auto"
          >
            <div
              class="mx_Flex mx_UserInfo_profile_name"
              style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            >
              @user:example.com
            </div>
          </h1>
          <div
            class="mx_PresenceLabel mx_UserInfo_profileStatus"
          >
            Unknown
          </div>
          <p
            class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 mx_UserInfo_profile_mxid"
          >
            <div
              class="mx_CopyableText"
            >
              customUserIdentifier
              <div
                aria-label="Copy"
                class="mx_AccessibleButton mx_CopyableText_copyButton"
                role="button"
                tabindex="0"
              />
            </div>
          </p>
        </div>
        <div
          class="mx_Flex mx_UserInfo_verification"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
        >
          <p
            class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31 mx_UserInfo_verification_unavailable"
          >
            (
            User verification unavailable
            )
          </p>
        </div>
      </div>
      <div
        class="mx_UserInfo_container"
      >
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26"
          data-kind="primary"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m1.5 21.25 1.45-4.95a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1m2.45-1.2 3.2-.95a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Send message
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26 _disabled_dyt4i_118"
          data-kind="primary"
          disabled=""
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Jump to read receipt
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26"
          data-kind="primary"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 16a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 15V7.85L9.125 9.725q-.3.3-.7.3T7.7 9.7a.93.93 0 0 1-.288-.713A.98.98 0 0 1 7.7 8.3l3.6-3.6q.15-.15.325-.213.175-.062.375-.062t.375.062a.9.9 0 0 1 .325.213l3.6 3.6q.3.3.287.712a.98.98 0 0 1-.287.688q-.3.3-.713.313a.93.93 0 0 1-.712-.288L13 7.85V15q0 .424-.287.713A.97.97 0 0 1 12 16m-6 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 18v-2q0-.424.287-.713A.97.97 0 0 1 5 15q.424 0 .713.287Q6 15.576 6 16v2h12v-2q0-.424.288-.713A.97.97 0 0 1 19 15q.424 0 .712.287.288.288.288.713v2q0 .824-.587 1.413A1.93 1.93 0 0 1 18 20z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Share profile
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </div>
      <div
        class="mx_UserInfo_container"
      >
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26"
          data-kind="critical"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22m0-2q3.35 0 5.675-2.325T20 12q0-1.35-.437-2.6A8 8 0 0 0 18.3 7.1L7.1 18.3q1.05.825 2.3 1.262T12 20m-6.3-3.1L16.9 5.7a8 8 0 0 0-2.3-1.263A7.8 7.8 0 0 0 12 4Q8.65 4 6.325 6.325T4 12q0 1.35.438 2.6A8 8 0 0 0 5.7 16.9"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Ignore
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserInfo /> with crypto enabled should render a deactivate button for users of the same server if we are a server admin 1`] = `
<div>
  <div
    class="mx_BaseCard mx_UserInfo"
  >
    <div
      class="mx_BaseCard_header"
    >
      <div
        class="mx_BaseCard_header_title"
      >
        <p
          class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 mx_BaseCard_header_title_heading"
          role="heading"
        >
          Profile
        </p>
      </div>
      <button
        aria-labelledby=":r6s:"
        class="_icon-button_m2erp_8 _subtle-bg_m2erp_29"
        data-testid="base-card-close-button"
        role="button"
        style="--cpd-icon-button-size: 28px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_zr2a0_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="mx_AutoHideScrollbar"
      tabindex="-1"
    >
      <div
        class="mx_UserInfo_avatar"
      >
        <div
          class="mx_UserInfo_avatar_transition"
        >
          <div
            class="mx_UserInfo_avatar_transition_child"
          >
            <button
              aria-label="Profile picture"
              aria-live="off"
              class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
              data-color="3"
              data-testid="avatar-img"
              data-type="round"
              role="button"
              style="--cpd-avatar-size: 120px;"
            >
              u
            </button>
          </div>
        </div>
      </div>
      <div
        class="mx_UserInfo_container mx_UserInfo_header"
      >
        <div
          class="mx_Flex mx_UserInfo_profile"
          style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
        >
          <h1
            class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
            dir="auto"
          >
            <div
              class="mx_Flex mx_UserInfo_profile_name"
              style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            >
              @user:example.com
            </div>
          </h1>
          <div
            class="mx_PresenceLabel mx_UserInfo_profileStatus"
          >
            Unknown
          </div>
          <p
            class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 mx_UserInfo_profile_mxid"
          >
            <div
              class="mx_CopyableText"
            >
              customUserIdentifier
              <div
                aria-label="Copy"
                class="mx_AccessibleButton mx_CopyableText_copyButton"
                role="button"
                tabindex="0"
              />
            </div>
          </p>
        </div>
        <div
          class="mx_Flex mx_UserInfo_verification"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
        >
          <p
            class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31 mx_UserInfo_verification_unavailable"
          >
            (
            User verification unavailable
            )
          </p>
        </div>
      </div>
      <div
        class="mx_UserInfo_container"
      >
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26"
          data-kind="primary"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m1.5 21.25 1.45-4.95a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1m2.45-1.2 3.2-.95a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Send message
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26 _disabled_dyt4i_118"
          data-kind="primary"
          disabled=""
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Jump to read receipt
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26"
          data-kind="primary"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 16a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 15V7.85L9.125 9.725q-.3.3-.7.3T7.7 9.7a.93.93 0 0 1-.288-.713A.98.98 0 0 1 7.7 8.3l3.6-3.6q.15-.15.325-.213.175-.062.375-.062t.375.062a.9.9 0 0 1 .325.213l3.6 3.6q.3.3.287.712a.98.98 0 0 1-.287.688q-.3.3-.713.313a.93.93 0 0 1-.712-.288L13 7.85V15q0 .424-.287.713A.97.97 0 0 1 12 16m-6 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 18v-2q0-.424.287-.713A.97.97 0 0 1 5 15q.424 0 .713.287Q6 15.576 6 16v2h12v-2q0-.424.288-.713A.97.97 0 0 1 19 15q.424 0 .712.287.288.288.288.713v2q0 .824-.587 1.413A1.93 1.93 0 0 1 18 20z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Share profile
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </div>
      <div
        class="mx_UserInfo_container"
      >
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26"
          data-kind="critical"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 21q-.824 0-1.412-.587A1.93 1.93 0 0 1 5 19V6a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 5q0-.424.287-.713A.97.97 0 0 1 5 4h4q0-.424.287-.712A.97.97 0 0 1 10 3h4q.424 0 .713.288Q15 3.575 15 4h4q.424 0 .712.287Q20 4.576 20 5t-.288.713A.97.97 0 0 1 19 6v13q0 .824-.587 1.413A1.93 1.93 0 0 1 17 21zM7 6v13h10V6zm2 10q0 .424.287.712Q9.576 17 10 17t.713-.288A.97.97 0 0 0 11 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 10 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 9 9zm4 0q0 .424.287.712.288.288.713.288.424 0 .713-.288A.97.97 0 0 0 15 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 14 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 13 9z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Deactivate user
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </div>
      <div
        class="mx_UserInfo_container"
      >
        <button
          class="_item_dyt4i_8 _interactive_dyt4i_26"
          data-kind="critical"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="_icon_dyt4i_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22m0-2q3.35 0 5.675-2.325T20 12q0-1.35-.437-2.6A8 8 0 0 0 18.3 7.1L7.1 18.3q1.05.825 2.3 1.262T12 20m-6.3-3.1L16.9 5.7a8 8 0 0 0-2.3-1.263A7.8 7.8 0 0 0 12 4Q8.65 4 6.325 6.325T4 12q0 1.35.438 2.6A8 8 0 0 0 5.7 16.9"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
          >
            Ignore
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_dyt4i_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserInfoHeader /> renders verification unavailable message 1`] = `
<div>
  <div
    class="mx_UserInfo_avatar"
  >
    <div
      class="mx_UserInfo_avatar_transition"
    >
      <div
        class="mx_UserInfo_avatar_transition_child"
      >
        <button
          aria-label="Profile picture"
          aria-live="off"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="3"
          data-testid="avatar-img"
          data-type="round"
          role="button"
          style="--cpd-avatar-size: 120px;"
          title="customUserIdentifier"
        >
          u
        </button>
      </div>
    </div>
  </div>
  <div
    class="mx_UserInfo_container mx_UserInfo_header"
  >
    <div
      class="mx_Flex mx_UserInfo_profile"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <h1
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
        dir="auto"
      >
        <div
          class="mx_Flex mx_UserInfo_profile_name"
          style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
        >
          @user:example.com
        </div>
      </h1>
      <div
        class="mx_PresenceLabel mx_UserInfo_profileStatus"
      >
        Unknown
      </div>
      <p
        class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 mx_UserInfo_profile_mxid"
      >
        <div
          class="mx_CopyableText"
        >
          customUserIdentifier
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          />
        </div>
      </p>
    </div>
    <div
      class="mx_Flex mx_UserInfo_verification"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <p
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31 mx_UserInfo_verification_unavailable"
      >
        (
        User verification unavailable
        )
      </p>
    </div>
  </div>
</div>
`;

exports[`<UserInfoHeader /> renders verified badge when user is verified 1`] = `
<div>
  <div
    class="mx_UserInfo_avatar"
  >
    <div
      class="mx_UserInfo_avatar_transition"
    >
      <div
        class="mx_UserInfo_avatar_transition_child"
      >
        <button
          aria-label="Profile picture"
          aria-live="off"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="3"
          data-testid="avatar-img"
          data-type="round"
          role="button"
          style="--cpd-avatar-size: 120px;"
          title="customUserIdentifier"
        >
          u
        </button>
      </div>
    </div>
  </div>
  <div
    class="mx_UserInfo_container mx_UserInfo_header"
  >
    <div
      class="mx_Flex mx_UserInfo_profile"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <h1
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
        dir="auto"
      >
        <div
          class="mx_Flex mx_UserInfo_profile_name"
          style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
        >
          @user:example.com
        </div>
      </h1>
      <div
        class="mx_PresenceLabel mx_UserInfo_profileStatus"
      >
        Unknown
      </div>
      <p
        class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 mx_UserInfo_profile_mxid"
      >
        <div
          class="mx_CopyableText"
        >
          customUserIdentifier
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          />
        </div>
      </p>
    </div>
    <div
      class="mx_Flex mx_UserInfo_verification"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <span
        class="_typography_6v6n8_153 _font-body-sm-medium_6v6n8_41 _badge_1t12g_8 mx_UserInfo_verified_badge"
        data-kind="green"
      >
        <svg
          class="mx_UserInfo_verified_icon"
          fill="currentColor"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.15 21.75 6.7 19.3l-2.75-.6a.94.94 0 0 1-.6-.387.93.93 0 0 1-.175-.688L3.45 14.8l-1.875-2.15a.93.93 0 0 1-.25-.65q0-.375.25-.65L3.45 9.2l-.275-2.825a.93.93 0 0 1 .175-.687.94.94 0 0 1 .6-.388l2.75-.6 1.45-2.45a.98.98 0 0 1 .55-.437.97.97 0 0 1 .7.037l2.6 1.1 2.6-1.1a.97.97 0 0 1 .7-.038q.35.112.55.438L17.3 4.7l2.75.6q.375.075.6.388.225.312.175.687L20.55 9.2l1.875 2.15q.25.275.25.65t-.25.65L20.55 14.8l.275 2.825a.93.93 0 0 1-.175.688.94.94 0 0 1-.6.387l-2.75.6-1.45 2.45a.98.98 0 0 1-.55.438.97.97 0 0 1-.7-.038l-2.6-1.1-2.6 1.1a.97.97 0 0 1-.7.038.98.98 0 0 1-.55-.438m2.8-9.05L9.5 11.275A.93.93 0 0 0 8.812 11q-.412 0-.712.3a.95.95 0 0 0-.275.7q0 .425.275.7l2.15 2.15q.3.3.7.3t.7-.3l4.25-4.25q.3-.3.287-.7a1.06 1.06 0 0 0-.287-.7 1.02 1.02 0 0 0-.713-.312.93.93 0 0 0-.712.287z"
          />
        </svg>
        <p
          class="_typography_6v6n8_153 _font-body-sm-medium_6v6n8_41 mx_UserInfo_verified_label"
        >
          Verified
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`<UserInfoHeader /> renders verify button 1`] = `
<div>
  <div
    class="mx_UserInfo_avatar"
  >
    <div
      class="mx_UserInfo_avatar_transition"
    >
      <div
        class="mx_UserInfo_avatar_transition_child"
      >
        <button
          aria-label="Profile picture"
          aria-live="off"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="3"
          data-testid="avatar-img"
          data-type="round"
          role="button"
          style="--cpd-avatar-size: 120px;"
          title="customUserIdentifier"
        >
          u
        </button>
      </div>
    </div>
  </div>
  <div
    class="mx_UserInfo_container mx_UserInfo_header"
  >
    <div
      class="mx_Flex mx_UserInfo_profile"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <h1
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
        dir="auto"
      >
        <div
          class="mx_Flex mx_UserInfo_profile_name"
          style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
        >
          @user:example.com
        </div>
      </h1>
      <div
        class="mx_PresenceLabel mx_UserInfo_profileStatus"
      >
        Unknown
      </div>
      <p
        class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 mx_UserInfo_profile_mxid"
      >
        <div
          class="mx_CopyableText"
        >
          customUserIdentifier
          <div
            aria-label="Copy"
            class="mx_AccessibleButton mx_CopyableText_copyButton"
            role="button"
            tabindex="0"
          />
        </div>
      </p>
    </div>
    <div
      class="mx_Flex mx_UserInfo_verification"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <div
        class="mx_UserInfo_container_verifyButton"
      >
        <button
          class="_button_vczzf_8 mx_UserInfo_verify_button"
          data-kind="tertiary"
          data-size="sm"
          role="button"
          tabindex="0"
        >
          Verify User
        </button>
      </div>
    </div>
  </div>
</div>
`;
